--- a/todo_app/Jenkinsfile
+++ b/todo_app/Jenkinsfile
@@ -2,7 +2,6 @@ pipeline {
     agent any
 
     environment {
-        DOCKERHUB_CREDENTIALS = 'dockerhub-creds'
         IMAGE_NAME = 'nabeel1279/react-app'
         TAG = 'latest'
     }
@@ -17,9 +16,7 @@ pipeline {
         stage('Build Docker Image') {
             steps {
                 dir('todo_app') {   // 👈 go inside todo_app folder
-                    script {
-                        sh 'docker build -t $IMAGE_NAME:$TAG .'
-                    }
+                    sh 'docker build -t $IMAGE_NAME:$TAG .'
                 }
             }
         }
@@ -27,10 +24,11 @@ pipeline {
         stage('Push to DockerHub') {
             steps {
                 dir('todo_app') {   // 👈 also push from inside todo_app
-                    script {
-                        docker.withRegistry('https://index.docker.io/v1/', DOCKERHUB_CREDENTIALS) {
-                            sh 'docker push $IMAGE_NAME:$TAG'
-                        }
+                    withCredentials([usernamePassword(credentialsId: 'dockerhub-credentials', usernameVariable: 'DOCKER_USER', passwordVariable: 'DOCKER_PASS')]) {
+                        sh '''
+                            echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin
+                            docker push $IMAGE_NAME:$TAG
+                        '''
                     }
                 }
             }
