--- a/todo_app/Jenkinsfile
+++ b/todo_app/Jenkinsfile
@@ -24,7 +24,7 @@ pipeline {
         stage('Push to DockerHub') {
             steps {
                 dir('todo_app') {   // 👈 also push from inside todo_app
-                    withCredentials([usernamePassword(credentialsId: 'dockerhub-credentials', usernameVariable: 'DOCKER_USER', passwordVariable: 'DOCKER_PASS')]) {
+                    withCredentials([usernamePassword(credentialsId: 'dockerhub-creds', usernameVariable: 'DOCKER_USER', passwordVariable: 'DOCKER_PASS')]) {
                         sh '''
                             echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin
                             docker push $IMAGE_NAME:$TAG
